# kortex_motion_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml
backup/config/: feeding_parameter.yaml
backup/launch/: kortex_motion_executor.launch.bak  kortex_planning_server.launch.bak
backup/src/: main.cpp  motion_execution.cpp  motion_execution_backup.cpp  planner_profiles.hpp  planning_server.cpp
backup/src/utilities/: gripper_command.cpp
backup/srv/: GenerateKortexMotionPlan.srv
config/: feeding_config.yaml  kortex_motion_planning.rviz  task_composer_plugins.yaml
config/data/: collisionDetectionData20231214102940.csv  data.csv  normal.txt
config/tesseract/: gen3_robotiq_2f_85_plugins.yaml  kortex_motion_planning.rviz
doc/: GPT_SAM_Grasping.md  generalTutorial.md
include/kortex_motion_planning/: gen3_motion_executor.h  gen3_motion_planner.h  gen3_motion_planning.h  joint_space_planner_profiles.hpp  planner_profiles.hpp  planning_server.h  ros_utilities.hpp  simple_jmpe.hpp  simple_mpe.hpp
launch/: collision_detection.launch  collision_detection_and_visualization.launch  collision_detection_visualization.launch  kortex_forking_task.launch  kortex_joint_motion_planning.launch  kortex_joint_motion_widget.launch  kortex_motion_planning.launch  kortex_motion_planning_new.launch  kortex_motion_widget.launch  kortex_planning_server.launch  simple_jcmpe.launch  simple_jmpe.launch  stop.launch
msg/: JointPositions.msg
src/: bak.cpp  collision_detection.cpp  collision_detection_visualization.cpp  forking_task.cpp  gen3_motion_planner.cpp  get_utensil_action.cpp  joint_main.cpp  joint_space_planning_server.cpp  main copy.cpp  main.cpp  motion_execution.cpp  motoman_hc10_ikfast_plugin.cpp  motoman_hc10_ikfast_solver.hpp  planner_profiles.hpp  planning_server.cpp  planning_server_new.cpp  simple_jcmpe.cpp  simple_jmpe_bak.cpp  simple_mpe.cpp  wrench_sensing.cpp
src/collision_detection/: collision_detection.cpp  collision_detection_visualization.cpp
src/debug_tool/: door_open_client.py  get_utensil_client.py  gripper_command_client.py  kmpe.py  reach_apriltag_client.py  simple_cmpe_client.py  simple_jmpe_client.py  simple_jmpe_client2.py  surface_extractor_client.py  upright_skewer_client.py
src/utilities/: get_state.cpp  gripper_command.cpp  joint_torque_realtime_plot.cpp  joint_torque_visualization.cpp  ros_utilities.cpp  wrench_estimator.cpp
srv/: ExecuteMotionPlan.srv  GenerateKortexJointMotionPlan.srv  GetUtensil.srv  KortexSimpleCmpe.srv  KortexSimpleJmpe.srv  SendGripperCommand.srv  UprightSkewerAction.srv
