<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kortex_motion_planning</name>
  <version>0.1.0</version>
  <description>Kortex Motion Planning</description>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <!-- <depend>snp_msgs</depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <depend>roslib</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_support</depend>
  <depend>tesseract_urdf</depend>
  <depend>tesseract_kinematics</depend>
  <depend>geometry_msgs</depend>
  <depend>pinocchio</depend>


  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>moveit_core</build_depend>
  <exec_depend>moveit_core</exec_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>